--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -1,4 +1,2 @@
-pack.name=Pao RP
+pack.name=Manalistas
 pack.description=
-item.bridge:potion_pato=Poção do Pão
-item.bridge:potion_bread=Poção de pão
